--- a/package.json
+++ b/package.json
@@ -18,12 +18,16 @@
     "diff": "npx projen diff",
     "projen": "npx projen"
   },
+  "author": {
+    "name": "Code Leeek",
+    "organization": false
+  },
   "devDependencies": {
     "@types/jest": "^27.0.2",
     "@types/node": "^14.17.0",
     "@typescript-eslint/eslint-plugin": "^4.31.2",
     "@typescript-eslint/parser": "^4.31.2",
-    "aws-cdk": "^1.95.2",
+    "aws-cdk": "1.95.2",
     "eslint": "^7.32.0",
     "eslint-import-resolver-node": "^0.3.6",
     "eslint-import-resolver-typescript": "^2.5.0",
@@ -38,8 +42,8 @@
     "typescript": "^4.4.3"
   },
   "dependencies": {
-    "@aws-cdk/assert": "^1.95.2",
-    "@aws-cdk/core": "^1.95.2"
+    "@aws-cdk/assert": "1.95.2",
+    "@aws-cdk/core": "1.95.2"
   },
   "bundledDependencies": [],
   "license": "Apache-2.0",
