--- a/package.json
+++ b/package.json
@@ -43,6 +43,8 @@
   },
   "dependencies": {
     "@aws-cdk/assert": "1.95.2",
+    "@aws-cdk/aws-s3": "1.95.2",
+    "@aws-cdk/aws-s3-deployment": "1.95.2",
     "@aws-cdk/core": "1.95.2"
   },
   "bundledDependencies": [],
